# SUSTech-CS323-SPL-Compiler

./: .clang-format  .gitignore  .tasks  CMakeLists.txt  Phase1.md  Phase2.md  README.md
IR_Optimizer/: .gdb_history  Makefile  optimize.c  optimize.h
IR_Optimizer/test/: test_3_r01.ir  test_3_r02.ir  test_3_r04.ir
MIPS_asm/: CMakeLists.txt  asm.cpp  asm.hpp  phase4.md
MIPS_asm/include/: asm.hpp  asm.inl  mips32.hpp  utils.hpp
MIPS_asm/src/: asm.cpp  main.cpp  mips32.cpp
MIPS_asm/test/: test_4_r01.ir  test_4_r01.s  test_4_r02.s  test_4_r03.s
doc/: Phase2.md  Phase3.md  phase4.md
include/: Command.hpp  Frontage.hpp  Lexer.hpp  Scanner.hpp  Semantic.hpp  SplFrontage.hpp  Type.hpp
modules/IR_Optimizer/: optimize.c
modules/IR_Optimizer/test/: test_3_r05.ir
modules/MIPS_asm/: CMakeLists.txt  test.sh
modules/MIPS_asm/include/: asm.hpp  asm.inl  mips32.hpp
modules/MIPS_asm/src/: main.cpp  mips32.cpp  utils.cpp
modules/MIPS_asm/test/: test_4_r01.s  test_4_r02.s  test_4_r03.s
phase1/doc/: feature-request.md
phase1/include/: SplFrontage.hpp
phase1/src/: CMakeLists.txt
phase1/src/parser/: CMakeLists.txt  Parser.y
phase1/src/scanner/: CMakeLists.txt
phase1/test/phase1/: Phase1Tester.cpp  diffhelp.sh
phase1/test/phase1/debug/: debug1.txt
src/: CMakeLists.txt  Command.cpp  Frontage.cpp  Type.cpp
src/lexer/: CMakeLists.txt  Lexer.ll
src/parser/: CMakeLists.txt  Parser-old.y  Parser.y
src/scanner/: CMakeLists.txt  Scanner.l
src/semantic_analyzer/: CMakeLists.txt  Semantic.cpp
test/: CMakeLists.txt
test/lexer/: CMakeLists.txt  LexerTest.cpp
test/phase1/: CMakeLists.txt  Phase1Tester.cpp
test/phase1/debug/: debug1.txt
test/phase1/lexicalError/: testcase_10.spl  testcase_10right.spl  testcase_8.spl  testcase_8right.spl  testcase_9.spl  testcase_9right.spl
test/phase1/syntaxError/: testcase_4right.spl
test/phase2/: CMakeLists.txt  Phase2Tester.cpp
test/phase2/testcases/: test_2_r01.spl
test/scanner/: CMakeLists.txt  LexerTest.cpp
